# amplifier-module-provider-github-copilot

./: .gitignore  MIGRATION.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyrightconfig.example.json  test-output.xml
amplifier_module_provider_github_copilot/: __init__.py  _compat.py  _constants.py  _permissions.py  _platform.py  client.py  completion.py  config_loader.py  converters.py  error_translation.py  event_router.py  exceptions.py  fake_tool_detection.py  model_cache.py  model_naming.py  models.py  observability.py  provider.py  request_adapter.py  retry_utils.py  sdk_driver.py  security_redaction.py  streaming.py  tool_capture.py  tool_parsing.py
amplifier_module_provider_github_copilot/config/: __init__.py  _models.py  _policy.py  _sdk_protection.py  errors.yaml  events.yaml  fake-tool-detection.yaml  model_cache.yaml  models.yaml  observability.yaml  retry.yaml  sdk_protection.yaml
amplifier_module_provider_github_copilot/config/data/: __init__.py  errors.yaml  events.yaml
amplifier_module_provider_github_copilot/sdk_adapter/: __init__.py  _imports.py  _spec_utils.py  client.py  event_helpers.py  extract.py  model_translation.py  tool_capture.py  types.py
contracts/: behaviors.md  deny-destroy.md  error-hierarchy.md  event-vocabulary.md  observability.md  provider-protocol.md  sdk-boundary.md  sdk-protection.md  sdk-response.md  streaming-contract.md
docs/: ARCHITECTURE.md
docs/plans/: 2026-02-23-process-singleton-design.md
scripts/: amplifier_settings.yaml  smoke_test.py
tests/: __init__.py  conftest.py  sdk_helpers.py  test_auth_token.py  test_behavioral.py  test_behaviors.py  test_bug_fixes.py  test_client.py  test_client_coverage.py  test_client_lifecycle.py  test_completion.py  test_completion_guard.py  test_concurrent_sessions.py  test_config_driven_timeout.py  test_config_field_conformance.py  test_config_loading.py  test_config_validation.py  test_contract_deny_destroy.py  test_contract_errors.py  test_contract_events.py  test_contract_protocol.py  test_contract_streaming.py  test_converters.py  test_cost_tier_and_caps.py  test_coverage_gaps.py  test_cross_platform.py  test_default_model.py  test_deferred_imports.py  test_deny_destroy_allowlist.py  test_deny_destroy_ephemeral.py  test_deny_destroy_no_execution.py  test_deny_destroy_permission.py  test_deny_hook_mandatory.py  test_disconnect_failures.py  test_entry_point.py  test_ephemeral_sessions.py  test_error_context.py  test_error_mappings.py  test_error_multiplier.py  test_error_translation.py  (+68 more)
tests/fixtures/: __init__.py  config_capture.py  sdk_mocks.py  sdk_responses.py
tests/integration/: __init__.py  forensic_runner.py  test_forensic_regression.py  test_live_copilot.py  test_live_sdk_driver.py  test_multi_model_saturation.py  test_regression_305_loop.py
tests/sdk_assumptions/: README.md  __init__.py  conftest.py  test_deny_hook.py  test_event_ordering.py  test_session_lifecycle.py  test_tool_registration.py
typings/amplifier_core/: __init__.pyi  events.pyi  llm_errors.pyi  message_models.pyi
typings/copilot/: __init__.pyi  types.pyi
